libsiridb (0.9.2)

  * Changed 'char * name' to 'const char * name' in siridb_series_create
    function decleration.

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  11 Sep 2017

libsiridb (0.9.1)

  * Example libuv now uses the libsuv library and is moved to its own repo.

  * Build platform independent build.

  * Compatible with libqpack version >=0.10.4

  * Fixed compiler warnings.

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  31 Aug 2017

libsiridb (0.9.0)

  * Initial version for the C program language.

  * Inluding a libuv example implementation.

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  14 Jun 2017